--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "react-hw-05-movies",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://goitacademy.github.io/react-homework-template/",
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bundler": "^0.8.0",
+    "g": "^2.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
