--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "react-hw-05-movies",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://petruvlad.github.io/react-hw-05-movies/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
     "bundler": "^0.8.0",
     "g": "^2.0.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "normalize.css": "^8.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.21.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
