--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.5",
     "bundler": "^0.8.0",
     "g": "^2.0.1",
+    "node-fetch": "^2.7.0",
     "normalize.css": "^8.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
